# anchor-rs

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  cspell.yaml  oids.json  sonar-project.properties
.cargo/: config.toml
.github/workflows/: ci.yml
keetanetwork-anchor/: Cargo.toml  build.rs
keetanetwork-anchor-bindings/: Cargo.toml
keetanetwork-anchor-bindings/src/: account.rs  certificate.rs  encrypted_container.rs  error.rs  lib.rs  parse.rs  registry.rs  sharable_attributes.rs  testing.rs
keetanetwork-anchor-client/: Cargo.toml
keetanetwork-anchor-client-wasi/: Cargo.toml
keetanetwork-anchor-client-wasi/bindings/csharp/KeetaNet.Anchor.Kyc/: AssetDtos.cs  AssetMovement.cs  Container.cs  Crypto.cs  Dtos.cs  KeetaException.cs  KeetaNet.Anchor.Kyc.csproj  KycClient.cs  Sharable.cs  WasmRuntime.AssetMovement.cs  WasmRuntime.Crypto.cs  WasmRuntime.EncryptedContainer.cs  WasmRuntime.Sharable.cs  WasmRuntime.cs
keetanetwork-anchor-client-wasi/bindings/csharp/KeetaNet.Anchor.Kyc.Example/: KeetaNet.Anchor.Kyc.Example.csproj  Program.cs
keetanetwork-anchor-client-wasi/bindings/csharp/KeetaNet.Anchor.Kyc.Harness/: Program.cs
keetanetwork-anchor-client-wasi/host-tests/: Cargo.toml
keetanetwork-anchor-client-wasi/host-tests/tests/: csharp_p1_asset.rs  csharp_p1_container.rs  csharp_p1_container_conformance.rs  csharp_p1_kyc.rs  csharp_p1_kyc_issue.rs  csharp_p1_kyc_prove.rs  csharp_p1_sharable.rs  p1_crypto.rs  p1_kyc.rs  p1_sharable.rs  p2_asset.rs  p2_container.rs  p2_crypto.rs  p2_kyc.rs  p2_sharable.rs
keetanetwork-anchor-client-wasi/host-tests/tests/common/: mod.rs
keetanetwork-anchor-client-wasi/host-tests/tests/dotnet/: mod.rs
keetanetwork-anchor-client-wasi/host-tests/tests/wasmtime_p1/: mod.rs
keetanetwork-anchor-client-wasi/host-tests/tests/wasmtime_p2/: mod.rs
keetanetwork-anchor-client-wasi/src/: asset_json.rs  lib.rs
keetanetwork-anchor-client-wasi/src/p1/: asset_movement.rs  encrypted_container.rs  kyc.rs  kyc_certificate.rs  mod.rs  node.rs  sharable.rs  transport.rs
keetanetwork-anchor-client-wasi/src/p2/: account.rs  asset_movement.rs  certificate.rs  encrypted_container.rs  kyc.rs  kyc_certificate.rs  mod.rs  sharable.rs
keetanetwork-anchor-client-wasi/wit/: world.wit
keetanetwork-anchor-client/node-harness/: package-lock.json  package.json  tsconfig.json
keetanetwork-anchor-client/node-harness/src/: accounts.ts  anchor-sign.ts  asset.ts  chain.ts  container.ts  core.ts  kyc.ts  sharable.ts  signing.ts  values.ts
keetanetwork-anchor-client/src/: error.rs  lib.rs  marker.rs  sharable.rs  trust.rs
keetanetwork-anchor-client/src/resilience/: backoff.rs  error.rs  lease.rs  mod.rs  rate_limit.rs  retry.rs  runtime.rs  transport.rs
keetanetwork-anchor-client/src/resolver/: decode.rs  metadata.rs  mod.rs  query.rs  read.rs  source.rs
keetanetwork-anchor-client/src/service/: caller.rs  context.rs  endpoint.rs  envelope.rs  mod.rs
keetanetwork-anchor-client/src/services/: kyc.rs  mod.rs
keetanetwork-anchor-client/src/services/asset_movement/: asset.rs  client.rs  error.rs  location.rs  metadata.rs  mod.rs  request.rs  response.rs
keetanetwork-anchor-client/src/transport/: mod.rs  retry_after.rs  wasi.rs
keetanetwork-anchor-client/tests/: account_certificates.rs  asset_movement.rs  external_url.rs  kyc.rs  resilience.rs  resolver.rs  rust_reads_typescript_leaf.rs  rust_reads_typescript_sharable.rs  sharable_references.rs  signing.rs  signing_parity.rs  transport.rs  typescript_reads_rust_leaf.rs  typescript_reads_rust_sharable.rs
keetanetwork-anchor-client/tests/common/: mod.rs
keetanetwork-anchor-client/tests/harness/: asset.rs  kyc.rs  mod.rs  sharable.rs  signing.rs
keetanetwork-anchor-client/tests/support/: driver.rs  kyc.rs  mod.rs  signing.rs
keetanetwork-anchor/asn1/: encrypted_container.asn  kyc_attributes.asn
keetanetwork-anchor/src/: doc_utils.rs  error.rs  generated.rs  iso20022.rs  lib.rs  testing.rs  utils.rs
keetanetwork-anchor/src/asn1/: error.rs  mod.rs  utils.rs
keetanetwork-anchor/src/certificates/: builder.rs  error.rs  mod.rs
keetanetwork-anchor/src/encrypted_container/: codec.rs  error.rs  mod.rs
keetanetwork-anchor/src/examples/: certificates.rs
keetanetwork-anchor/src/kyc_schema/: builder.rs  codec.rs  error.rs  iso20022_codec.rs  iso20022_engine.rs  mod.rs  references.rs  serde.rs  structured.rs  testing.rs
keetanetwork-anchor/src/sensitive_attributes/: builder.rs  error.rs  mod.rs  serde.rs  utils.rs
keetanetwork-anchor/src/sharable_attributes/: contents.rs  error.rs  mod.rs
keetanetwork-anchor/src/signing/: canonical.rs  error.rs  format.rs  mod.rs  request.rs  signable.rs
keetanetwork-anchor/src/trust/: error.rs  mod.rs
keetanetwork-anchor/tests/: certificate_fixtures.rs  certificates.rs  common.rs  encrypted_container.rs  kyc_schema.rs  sensitive_attributes.rs  signing.rs  typescript_interoperability.rs
keetanetwork-anchor/tests/fixtures/: old_format.pem
scripts/: package-lock.json  package.json  release.sh
scripts/src/: gen-dtos.ts
src/: doc_utils.rs  generated.rs  iso20022.rs  lib.rs  testing.rs  utils.rs
src/asn1/: error.rs  oids.rs
src/certificates/: builder.rs  mod.rs
src/examples/: certificates.rs
src/kyc_schema/: builder.rs  mod.rs
src/lib/: asn1.rs  certificates.rs  doc_utils.rs  error.rs  generated.rs  mod.rs  testing.rs  utils.rs
src/lib/asn1/: error.rs  mod.rs  oids.rs  utils.rs
src/lib/certificates/: builder.rs  error.rs  mod.rs
src/lib/kyc_schema/: builder.rs  error.rs  mod.rs  serde.rs
src/lib/sensitive_attributes/: builder.rs  error.rs  mod.rs  serde.rs  utils.rs
src/sensitive_attributes/: builder.rs  mod.rs  serde.rs  utils.rs
tests/: certificates.rs  common.rs  sensitive_attributes.rs  typescript_interoperability.rs
tests/fixtures/: new_format.pem
