[package]
name = "keetanetwork-anchor"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "certificates"
path = "src/examples/certificates.rs"

# Dependencies

[dependencies]
rasn = "0.27.1"
rasn-derive = "0.27.1"
hex = "0.4"
base64 = "0.22.1"
lazy_static = "1.5.0"

[dependencies.chrono]
version = "0.4.41"
features = ["std", "serde"]
optional = true

[dependencies.snafu]
version = "0.8.6"
features = ["std"]

[dependencies.strum]
version = "0.27.2"
features = ["derive"]

[dependencies.serde]
version = "1.0.219"
features = ["derive"]
optional = true

[dependencies.serde_json]
version = "1.0.143"
optional = true

# From node-rs
# TODO Publish these crates

[dependencies.keetanetwork-crypto]
git = "ssh://git@github.com/KeetaNetwork/node-rs.git"
branch = "main"

[dependencies.keetanetwork-x509]
git = "ssh://git@github.com/KeetaNetwork/node-rs.git"
branch = "main"

[dependencies.keetanetwork-asn1]
git = "ssh://git@github.com/KeetaNetwork/node-rs.git"
branch = "main"
default-features = false
features = ["rasn"]

[dependencies.keetanetwork-account]
git = "ssh://git@github.com/KeetaNetwork/node-rs.git"
branch = "main"

[dependencies.keetanetwork-utils]
git = "ssh://git@github.com/KeetaNetwork/node-rs.git"
branch = "main"

# Build Dependencies

[build-dependencies]
rasn-compiler = "0.14.2"
serde_json = "1.0"
keetanetwork-utils = { git = "ssh://git@github.com/KeetaNetwork/node-rs.git", branch = "main", features = [
	"build",
] }

[features]
default = ["serde", "chrono"]
serde = ["dep:serde", "dep:serde_json", "keetanetwork-asn1/serde"]
chrono = ["dep:chrono"]
