[workspace]
resolver = "2"
members = ["keetanetwork-anchor", "keetanetwork-anchor-bindings", "keetanetwork-anchor-client"]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Tanveer Wahid <twahid@keeta.com>"]
license = "MIT"
repository = "https://github.com/KeetaNetwork/anchor-rs"
homepage = "https://github.com/KeetaNetwork/anchor-rs"
description = "Rust implementation of the KeetaNet anchor"

# Shared dependencies. Feature surfaces are set per-crate so each member only
# pulls what it needs; published node-rs crates are pinned to 0.2.0.
[workspace.dependencies]

[workspace.dependencies.keetanetwork-crypto]
version = "0.2.0"

[workspace.dependencies.keetanetwork-x509]
version = "0.2.0"

[workspace.dependencies.keetanetwork-asn1]
version = "0.2.1"
default-features = false

[workspace.dependencies.keetanetwork-account]
version = "0.2.0"

[workspace.dependencies.keetanetwork-utils]
version = "0.2.0"

[workspace.dependencies.keetanetwork-block]
version = "0.2.0"

[workspace.dependencies.keetanetwork-vote]
version = "0.2.0"

[workspace.dependencies.rasn]
version = "0.27.1"

[workspace.dependencies.rasn-derive]
version = "0.27.1"

[workspace.dependencies.rasn-compiler]
version = "0.14.2"

[workspace.dependencies.hex]
version = "0.4.3"

[workspace.dependencies.base64]
version = "0.22.1"

[workspace.dependencies.lazy_static]
version = "1.5.0"

[workspace.dependencies.num-bigint]
version = "0.4.6"
default-features = false

[workspace.dependencies.chrono]
version = "0.4.45"
features = ["serde"]

[workspace.dependencies.snafu]
version = "0.9.1"
default-features = false

[workspace.dependencies.strum]
version = "0.28.0"

[workspace.dependencies.serde]
version = "1.0.228"
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.150"

[workspace.dependencies.uuid]
version = "1.11.0"
features = ["v4"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true
