[workspace]
resolver = "2"
members = [
    "keetanetwork-anchor",
    "keetanetwork-anchor-bindings",
    "keetanetwork-anchor-client",
    "keetanetwork-anchor-client-wasi",
]
exclude = ["keetanetwork-anchor-client-wasi/host-tests"]

[workspace.package]
version = "0.1.2"
edition = "2021"
authors = ["Tanveer Wahid <twahid@keeta.com>"]
license-file = "LICENSE"
repository = "https://github.com/KeetaNetwork/anchor-rs"
homepage = "https://github.com/KeetaNetwork/anchor-rs"
description = "Rust implementation of the KeetaNet anchor"

# Shared dependencies. Feature surfaces are set per-crate so each member only
# pulls what it needs; node-rs crates are pinned to their published versions.
[workspace.dependencies]

[workspace.dependencies.keetanetwork-crypto]
version = "0.3.0"
default-features = false

[workspace.dependencies.keetanetwork-x509]
version = "0.3.0"
default-features = false

[workspace.dependencies.keetanetwork-asn1]
version = "0.2.4"
default-features = false

[workspace.dependencies.keetanetwork-account]
version = "0.3.1"
default-features = false

[workspace.dependencies.keetanetwork-utils]
version = "0.2.1"
default-features = false

[workspace.dependencies.keetanetwork-block]
version = "0.3.1"

[workspace.dependencies.keetanetwork-vote]
version = "0.3.2"

[workspace.dependencies.keetanetwork-bindings]
version = "0.3.1"
default-features = false

[workspace.dependencies.keetanetwork-client]
version = "0.3.2"
default-features = false

[workspace.dependencies.keetanetwork-client-wasi]
version = "0.3.2"
default-features = false

[workspace.dependencies.keetanetwork-anchor]
version = "0.1.2"
path = "keetanetwork-anchor"
default-features = false

[workspace.dependencies.keetanetwork-anchor-bindings]
version = "0.1.2"
path = "keetanetwork-anchor-bindings"
default-features = false

[workspace.dependencies.keetanetwork-anchor-client]
version = "0.1.2"
path = "keetanetwork-anchor-client"
default-features = false

[workspace.dependencies.keetanetwork-anchor-client-wasi]
version = "0.1.2"
path = "keetanetwork-anchor-client-wasi"
default-features = false

[workspace.dependencies.rasn]
version = "0.27.1"
default-features = false

[workspace.dependencies.rasn-derive]
version = "0.27.1"

[workspace.dependencies.rasn-compiler]
version = "0.14.2"

[workspace.dependencies.hex]
version = "0.4.3"
default-features = false

[workspace.dependencies.base64]
version = "0.22.1"
default-features = false

[workspace.dependencies.lazy_static]
version = "1.5.0"

[workspace.dependencies.num-bigint]
version = "0.4.6"
default-features = false

[workspace.dependencies.chrono]
version = "0.4.45"
default-features = false
features = ["serde"]

[workspace.dependencies.snafu]
version = "0.8.7"
default-features = false

[workspace.dependencies.strum]
version = "0.28.0"
default-features = false

[workspace.dependencies.serde]
version = "1.0.228"
default-features = false
features = ["derive"]

[workspace.dependencies.serde_json]
version = "1.0.150"
default-features = false

[workspace.dependencies.uuid]
version = "1.23.4"
default-features = false
features = ["v4"]

[workspace.dependencies.url]
version = "2.5"
default-features = false

[workspace.dependencies.percent-encoding]
version = "2.3"
default-features = false
features = ["alloc"]

[workspace.dependencies.miniz_oxide]
version = "0.9.1"
default-features = false
features = ["with-alloc"]

[workspace.dependencies.async-trait]
version = "0.1.89"

[workspace.dependencies.tokio]
version = "1.52.3"

[workspace.dependencies.reqwest]
version = "0.13.4"
default-features = false

[workspace.dependencies.spin]
version = "0.12.1"
default-features = false

[workspace.dependencies.gloo-timers]
version = "0.4.0"

[workspace.dependencies.wasm-bindgen-futures]
version = "0.4.75"

[workspace.dependencies.js-sys]
version = "0.3.102"

[workspace.dependencies.web-sys]
version = "0.3.102"

[workspace.dependencies.wstd]
version = "0.6.7"

[workspace.dependencies.wit-bindgen]
version = "0.58"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
lto = true
codegen-units = 1
panic = "abort"

[profile.test]
opt-level = 1
debug = true
