[package]
name = "keetanetwork-anchor-bindings"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared, target-agnostic error mapping and input parsing for KeetaNet anchor binding crates"

[lib]
path = "src/lib.rs"

[features]
default = ["std"]
std = ["keetanetwork-bindings/std", "keetanetwork-anchor/std", "keetanetwork-x509/std", "keetanetwork-crypto/std"]

[dependencies]
keetanetwork-account = { workspace = true, default-features = false, features = [
	"rasn",
] }
keetanetwork-bindings = { workspace = true }
keetanetwork-anchor = { path = "../keetanetwork-anchor", default-features = false, features = [
	"alloc",
	"x509",
] }
keetanetwork-x509 = { workspace = true, default-features = false, features = [
	"rasn",
] }
keetanetwork-crypto = { workspace = true, default-features = false, features = [
	"signature",
	"encryption",
	"rasn",
] }
chrono = { workspace = true, default-features = false, features = ["alloc"] }

[dev-dependencies]
keetanetwork-anchor = { path = "../keetanetwork-anchor", features = [
	"std",
	"signing",
] }
keetanetwork-crypto = { workspace = true, features = [
	"std",
	"signature",
	"encryption",
	"rasn",
] }
