[package]
name = "keetanetwork-anchor-client-wasi"
version = "0.1.3"
edition.workspace = true
authors.workspace = true
license-file.workspace = true
repository.workspace = true
homepage.workspace = true
description = "WASI bindings for the KeetaNet anchor client: a P2 component (networked over wasi:http) and a P1 core module (offline), selected by feature"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Exactly one of `p1`/`p2` MUST be enabled for a wasi build.
p1 = ["dep:keetanetwork-client-wasi", "keetanetwork-client-wasi/p1", "dep:keetanetwork-block"]
# `p2`: wasm32-wasip2 component (wit-bindgen) networked over wasi:http.
p2 = ["dep:wstd", "dep:wit-bindgen", "keetanetwork-client/wasi"]

[dependencies]
keetanetwork-anchor-client = { workspace = true, features = [
	"kyc",
	"asset",
] }
keetanetwork-anchor-bindings = { workspace = true, default-features = true }
keetanetwork-account = { workspace = true, default-features = false, features = [
	"rasn",
] }
keetanetwork-client = { workspace = true }
keetanetwork-block = { workspace = true, optional = true }
num-bigint = { workspace = true }
hex = { workspace = true, features = ["alloc"] }

# On a wasi target the networked KYC surface adds the transport and resilience.
# P1 reaches HTTP through host imports; P2 reaches it through `wasi:http`.
[target.'cfg(target_os = "wasi")'.dependencies]
keetanetwork-anchor-client = { workspace = true, features = [
	"kyc",
	"asset",
	"wasi",
	"resilience",
] }

keetanetwork-anchor = { workspace = true, features = [
	"alloc",
	"x509",
	"chrono",
	"serde",
] }
keetanetwork-bindings = { workspace = true }
keetanetwork-x509 = { workspace = true, default-features = false, features = [
	"rasn",
	"alloc",
] }
keetanetwork-crypto = { workspace = true, default-features = false, features = [
	"signature",
	"encryption",
] }
chrono = { workspace = true, default-features = false, features = ["alloc"] }
async-trait = { workspace = true }
serde = { workspace = true, features = ["alloc"] }
serde_json = { workspace = true, features = ["alloc"] }
snafu = { workspace = true }
base64 = { workspace = true, features = ["alloc"] }
wstd = { workspace = true, optional = true }
wit-bindgen = { workspace = true, optional = true }
keetanetwork-client-wasi = { workspace = true, optional = true }
