[package]
name = "keetanetwork-anchor-client"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Transport-agnostic KeetaNet anchor client: request signing byte-compatible with the TypeScript reference"

[lib]
path = "src/lib.rs"

[dev-dependencies]
keetanetwork-anchor = { path = "../keetanetwork-anchor", features = ["signing"] }
hex = { workspace = true, features = ["std"] }
serde = { workspace = true, features = ["std"] }
serde_json = { workspace = true, features = ["std"] }
snafu = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["std", "clock"] }
keetanetwork-account = { workspace = true, features = ["std", "rasn"] }
keetanetwork-crypto = { workspace = true, features = ["std", "signature", "encryption", "rasn"] }
keetanetwork-utils = { workspace = true, features = ["std"] }
