[package]
name = "keetanetwork-anchor"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Rust implementation of KeetaNet anchor: KYC ASN.1 schemas, X.509 certificates, and hybrid encryption"

[lib]
crate-type = ["staticlib", "rlib"]
path = "src/lib.rs"

[[example]]
name = "certificates"
path = "src/examples/certificates.rs"

[dependencies]
rasn = { workspace = true, default-features = false }
rasn-derive = { workspace = true }
hex = { workspace = true, default-features = false, features = ["alloc"] }
base64 = { workspace = true, default-features = false, features = ["alloc"] }
lazy_static = { workspace = true, optional = true }
strum = { workspace = true, default-features = false, features = ["derive"] }
snafu = { workspace = true }
chrono = { workspace = true, default-features = false, features = [
	"alloc",
	"serde",
], optional = true }
serde = { workspace = true, default-features = false, optional = true }
serde_json = { workspace = true, default-features = false, features = [
	"alloc",
], optional = true }
uuid = { workspace = true, default-features = false, optional = true }
url = { workspace = true, optional = true }
miniz_oxide = { workspace = true, optional = true }
num-bigint = { workspace = true, optional = true }
keetanetwork-crypto = { workspace = true, default-features = false, features = [
	"rasn",
	"signature",
	"encryption",
] }
keetanetwork-x509 = { workspace = true, default-features = false, features = [
	"rasn",
] }
keetanetwork-asn1 = { workspace = true, features = ["rasn"] }
keetanetwork-account = { workspace = true, default-features = false, features = [
	"rasn",
] }
keetanetwork-utils = { workspace = true, default-features = false }

# On wasm there is no OS RNG or system clock
[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }
chrono = { workspace = true, features = ["wasmbind"], optional = true }
uuid = { workspace = true, features = ["js"], optional = true }

[build-dependencies]
rasn-compiler = { workspace = true }
serde_json = { workspace = true, features = ["std"] }
# The build script needs `serde` (for `get_oid_json`); `rasn` must accompany it
# because published asn1 0.2.3 fails to compile with `serde` but neither `rasn`
# nor `der`.
keetanetwork-asn1 = { workspace = true, features = ["rasn", "serde"] }
keetanetwork-utils = { workspace = true, features = ["build"] }

[dev-dependencies]
serde_json = { workspace = true, features = ["std"] }

[features]
default = ["std", "serde", "chrono", "signing", "encrypted-container"]
std = [
	"alloc",
	"snafu/std",
	"hex/std",
	"base64/std",
	"strum/std",
	"rasn/std",
	"chrono?/std",
	"chrono?/clock",
	"serde?/std",
	"serde_json?/std",
	"uuid?/std",
	"keetanetwork-crypto/std",
	"keetanetwork-x509/std",
	"keetanetwork-asn1/std",
	"keetanetwork-account/std",
	"keetanetwork-utils/std",
]
alloc = [
	"keetanetwork-crypto/alloc",
	"keetanetwork-x509/alloc",
	"keetanetwork-asn1/alloc",
	"keetanetwork-account/alloc",
	"chrono?/alloc",
	"serde?/alloc",
	"serde_json?/alloc",
]
serde = [
	"alloc",
	"dep:serde",
	"dep:serde_json",
	"keetanetwork-asn1/serde",
	"keetanetwork-x509/serde",
]
chrono = ["alloc", "dep:chrono"]
signing = ["alloc", "dep:chrono", "dep:serde_json", "dep:uuid", "dep:url"]
encrypted-container = ["alloc", "dep:miniz_oxide", "dep:num-bigint"]
x509 = ["alloc", "dep:chrono"]
